# fegis

./: .gitignore  COMMERCIAL.md  DONT_BE_EVIL.md  LICENSE  NOTICE.md  README.md  RESPONSIBLE_USE.md  log_viewer.py  pyproject.toml
archetypes/: archetype_reference.yaml  default.yaml  emoji_mind.yaml  example.yaml  introspective.yaml  polymodal.yaml  problem_solving.yaml  simple_example.yaml  slacker_web_wanderer.yaml  slime_mold.yaml  test_fegis.yaml  thinking_toolkit.yaml  vibe_surfer.yaml
archetypes/abstract/: emoji_mind.yaml  phenomenological.yaml  slacker_web_wanderer.yaml
archetypes/task_oriented/: dynamic_thinking.yaml  fegis_project_explorer.yaml  slime_mold.yaml
docs/: FEGIS_GUIDE.md  archetype-design.md  example-archetype-interaction.md  tool-call-output.md
fegis/: __init__.py  config.py  models.py  schema.py  search_tool_schema.json  server.py  storage.py
fegis/search/: __init__.py  formatters.py  handler.py  strategies.py
src/fegis/: archetype_compiler.py  constants.py  main.py  qdrant_connector.py  server.py  settings.py
src/mcp_fegis_server/: constants.py  main.py  model_builder.py  qdrant.py  qdrant_connector.py  server.py  settings.py
tests/: test_archetype_compiler.py  test_archetype_formatting.py  test_auto_id.py  test_fegis.py  test_fegis_core.py  test_validate_archetypes.py
