[project]
name = "mcp-fegis-server"
authors = [
    { name = "Perry Golden", email = "goldenp@ptology.com" },
]
version = "1.0.0"
description = "A schema-driven memory engine that gives LLMs cognitive tools and structured persistent memory."
readme = "README.md"
license = "PolyForm-Noncommercial-1.0.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "mcp[cli]>=0.9.1",
    "qdrant-client[fastembed]>=1.12.0",
    "click>=8.1.0",
    "asyncio>=3.4.3",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pyright>=1.1.389", "pytest>=8.3.3", "pytest-asyncio>=0.23.5", "ruff>=0.8.0"]

[project.scripts]
fegis = "mcp_fegis_server.main:main"

[project.urls]
repository = "https://github.com/pfunk/FEGIS"
