[project]
name = "fegis"
authors = [
    { name = "Perry Golden", email = "goldenp@ptology.com" },
]
version = "1.3.0"
description = "Fegis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12,<=3.13.1"
dependencies = [
    "mcp[cli]>=1.6.0",
    "qdrant-client[fastembed]>=1.12.0",
    "click>=8.1.0",
    "asyncio>=3.4.3",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pydantic>=2.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pyright>=1.1.389", "pytest>=8.3.3", "pytest-asyncio>=0.23.5", "ruff>=0.8.0", "locust>=2.24.0"]

[project.scripts]
fegis = "fegis.main:main"

[project.urls]
repository = "https://github.com/pfunk/FEGIS"
