[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fegis"
version = "2.0.0"
description = "MCP server for converting structured prompt configurations into validated tools with semantic memory."
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [
    {name = "Perry Golden", email = "goldenp@ptology.com"}
]

dependencies = [
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.0",
    "qdrant-client[fastembed]>=1.9.0",
    "pyyaml>=6.0",
    "mcp>=1.0.0",
    "typer>=0.9.0",
    "fastjsonschema>=2.16.0",
    "loguru>=0.7.0",
    "jsonschema>=4.24.0",
    "ruff>=0.11.13",
    "aiohttp>=3.12.13",
    "hatchling>=1.27.0",
]

[project.scripts]
fegis = "fegis.server:main"

[project.urls]
Homepage = "https://github.com/p-funk/fegis"
Repository = "https://github.com/p-funk/fegis"
Issues = "https://github.com/p-funk/fegis/issues"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "python-dotenv>=1.1.0",
]
